# db-api

./: .env.example  pyproject.toml
src/: main.py
src/database/: postgres.py
src/models/: product_models.py  retrieval_models.py
src/routes/: product_routes.py  retrieval_routes.py  routes.py
src/utils/: auth.py  create_emb.py
